# FastLint

./: Cargo.toml  index.html  makefile  readme.md
images/: screenshot.afphoto
src/: diagnostic.rs  main.rs  output.rs  walker.rs
src/checks/: conflict.rs  mod.rs  trailing_whitespace.rs  typos_check.rs
static/: index.html
tests/: cli.rs
website/: readme.md
website/static/: index.html
